tests/js_error/source_locations/expression/call/call_with_receiver.js
var o = {
  method() {
    throw new Error();
  }
};

o.method();